--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,30 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "190b1cdb-f3a6-4b30-9a8e-65c820e28b12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num GPUs Available:  1\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mRLDecon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mget_inputs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_inputs\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mRLDecon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrun_decon\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m run_5d_decon\n\u001b[1;32m----> 9\u001b[0m input_file_str, dat, mdata, psf488, psf640, z_spacing, niter, pad_amount \u001b[38;5;241m=\u001b[39m \u001b[43mget_inputs\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m run_5d_decon(input_file_str, dat, mdata, psf488, psf640, z_spacing[\u001b[38;5;241m0\u001b[39m], niter[\u001b[38;5;241m0\u001b[39m], pad_amount)\n",
-      "File \u001b[1;32m~\\Documents\\GitHub\\RLDecon\\RLDecon\\get_inputs.py:177\u001b[0m, in \u001b[0;36mget_inputs\u001b[1;34m()\u001b[0m\n\u001b[0;32m    174\u001b[0m file_defaults \u001b[38;5;241m=\u001b[39m { \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage_file\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mZ:/Shared243/storal/\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcsv_488\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mZ:/Shared243/storal/\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcsv_640\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mZ:/Shared243/storal/\u001b[39m\u001b[38;5;124m'\u001b[39m}\n\u001b[0;32m    175\u001b[0m file_inputs \u001b[38;5;241m=\u001b[39m get_multiple_file_inputs(root, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile Inputs\u001b[39m\u001b[38;5;124m\"\u001b[39m, file_defaults)\n\u001b[1;32m--> 177\u001b[0m input_file_str \u001b[38;5;241m=\u001b[39m \u001b[43mfile_inputs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mimage_file\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m    178\u001b[0m bead488_image_file_str \u001b[38;5;241m=\u001b[39m file_inputs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcsv_488\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m    179\u001b[0m bead640_image_file_str \u001b[38;5;241m=\u001b[39m file_inputs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcsv_640\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
@@ -35,8 +15,10 @@
     "from RLDecon.get_inputs import get_inputs\n",
     "from RLDecon.run_decon import run_5d_decon\n",
     "\n",
-    "input_file_str, dat, mdata, psf488, psf640, z_spacing, niter, pad_amount = get_inputs()\n",
-    "run_5d_decon(input_file_str, dat, mdata, psf488, psf640, z_spacing[0], niter[0], pad_amount)\n",
+    "variables = get_inputs()\n",
+    "if variables is not None:\n",
+    "    [input_file_str, dat, mdata, psfs, z_spacing, niter, pad_amount, channel] = variables\n",
+    "    run_5d_decon(input_file_str, dat, mdata, psfs, z_spacing[0], niter[0], pad_amount, channel)\n",
     "\n",
     "\n",
     "\n"
@@ -44,27 +26,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "4eadd453-2153-4176-8821-23967a853997",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a =[]\n",
+    "a.append(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "79f98f41-78b7-498d-8629-9ec0c2b952d7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tifffile.tifffile\n",
+    "input_file_str= 'E:/David/Deconvolution-tests/tiffs/Scott/slide1_capture1_2024-01-26_deskew_C0.tif'\n",
+    "with tifffile.TiffFile(input_file_str) as tif:\n",
+    "        mdata = tif.imagej_metadata\n",
+    "        dat = tif.asarray()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "38eaa0b2-ed38-4fc4-8f3e-a68d1e65bce6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ImageJ': '1.54f',\n",
+       " 'images': 59,\n",
+       " 'slices': 59,\n",
+       " 'unit': '\\\\u00B5m',\n",
+       " 'spacing': 0.271,\n",
+       " 'loop': False,\n",
+       " 'min': 0.0,\n",
+       " 'max': 132.0,\n",
+       " 'Info': 'Software: SlideBook\\nDateTime: 2024:02:17 08:52:45\\n'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "957ff4e6-3ca9-4428-8c43-f0b921a488f7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b =(1,2,3,4)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f8fc611a-4f10-46b9-ba60-2d80907a5a65",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3],\n",
+       "       [4]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.expand_dims(b, 1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -72,7 +119,10 @@
    "id": "b8dcc4aa-6edd-48ff-ab74-8cfa1f59b539",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "E:\\anaconda3\\envs\\FlowDec\\python.exe C:\\Users\\u1604360\\AppData\\Roaming\\Python\\Python38\\Scripts\\pyinstaller.exe --onefile RLDecon.py "
+   ]
   },
   {
    "cell_type": "code",
@@ -80,7 +130,9 @@
    "id": "7f8f0206-644f-4fc6-b189-c39ce3c17da8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "python.exe --onefile RLDecon.py "
+   ]
   },
   {
    "cell_type": "code",
