--- a/Test.ipynb
+++ b/Test.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4eadd453-2153-4176-8821-23967a853997",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "E:\\anaconda3\\envs\\FlowDec\\python.exe C:\\Users\\u1604360\\AppData\\Roaming\\Python\\Python38\\Scripts\\pyinstaller.exe --onefile RLDecon.py "
+    "E:\\anaconda3\\envs\\FlowDec\\python.exe C:\\Users\\u1604360\\AppData\\Roaming\\Python\\Python38\\Scripts\\pyinstaller.exe --onefile --add-binary=\"E:\\anaconda3\\envs\\FlowDec\\Library\\bin\\cudart64_110.dll;.\" --add-binary=\"E:\\anaconda3\\envs\\FlowDec\\Library\\bin\\cublas64_11.dll;.\" RLDecon.py "
    ]
   },
   {
