--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "03f49b79-76c4-48de-b3f1-1a208542f0f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected .tif files:\n"
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import filedialog, Listbox\n",
@@ -54,6 +62,41 @@
     "\n",
     "# After the GUI is closed, print the list of selected .tif files\n",
     "print(\"Selected .tif files:\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df670b2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "# warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "\n",
+    "\n",
+    "\n",
+    "from RLDecon.get_inputs_batch import get_inputs_batch\n",
+    "from RLDecon.get_inputs import get_inputs\n",
+    "from RLDecon.run_decon_debug import run_decon\n",
+    "\n",
+    "batch = True\n",
+    "debug = True\n",
+    "if batch:\n",
+    "    variables = get_inputs_batch()\n",
+    "else:\n",
+    "    variables = get_inputs()\n",
+    "    \n",
+    "\n",
+    "# print(variables)\n",
+    "if variables is not None:\n",
+    "    \n",
+    "\n",
+    "    if batch:\n",
+    "        [input_files, dats, mdata, psfs, x_res, y_res, z_spacing, niter, pad_amount, channel] = variables\n",
+    "        run_decon(input_files, dats, mdata, psfs, x_res, y_res, z_spacing[0], niter[0], pad_amount, channel, debug)\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -382,30 +425,80 @@
     }
    ],
    "source": [
-    "import warnings\n",
-    "# warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "# import warnings\n",
+    "# # warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
     "\n",
     "\n",
-    "from RLDecon.get_inputs_batch import get_inputs_batch\n",
-    "from RLDecon.get_inputs import get_inputs\n",
-    "from RLDecon.run_decon import run_5d_decon\n",
+    "# from RLDecon.get_inputs_batch import get_inputs_batch\n",
+    "# from RLDecon.get_inputs import get_inputs\n",
+    "# from RLDecon.run_decon import run_5d_decon\n",
+    "# from RLDecon.run_decon import run_5d_decon_batch\n",
     "\n",
-    "batch = True\n",
-    "if batch:\n",
-    "    variables = get_inputs_batch()\n",
-    "else:\n",
-    "    variables = get_inputs()\n",
+    "# batch = True\n",
+    "# manyiterations = True\n",
+    "# if batch:\n",
+    "#     variables = get_inputs_batch()\n",
+    "# else:\n",
+    "#     variables = get_inputs()\n",
     "\n",
-    "print(variables)\n",
+    "# print(variables)\n",
     "# if variables is not None:\n",
-    "#     [input_file_str, dat, mdata, psfs, x_res, y_res, z_spacing, niter, pad_amount, channel] = variables\n",
     "    \n",
-    "#     run_5d_decon(input_file_str, dat, mdata, psfs, x_res, y_res, z_spacing[0], niter[0], pad_amount, channel)\n",
+    "\n",
+    "#     if batch:\n",
+    "#         [input_file_str, dat, mdata, psfs, x_res, y_res, z_spacing, niter, pad_amount, channel] = variables\n",
+    "#         run_5d_decon(input_file_str, dat, mdata, psfs, x_res, y_res, z_spacing[0], niter[0], pad_amount, channel)\n",
+    "#     else:\n",
+    "#         [input_file_str, dat, mdata, psfs, x_res, y_res, z_spacing, niter, pad_amount, channel] = variables\n",
+    "#         run_5d_decon(input_file_str, dat, mdata, psfs, x_res, y_res, z_spacing[0], niter[0], pad_amount, channel)\n",
+    "    \n",
+    "\n",
     "\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7f178268",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 10, 15, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_rl = 19\n",
+    "\n",
+    "\n",
+    "print(iterations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9931dd75",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate list (not \"int\") to list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43minput_rl\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
