feat(batch): name change and average folder of psf

--- a/PSFs.ipynb
+++ b/PSFs.ipynb
@@ -61,13 +61,44 @@
    "execution_count": 18,
    "id": "6aefb855-9d17-4dc3-9d81-5d032a26283b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z:\\Shared243\\storal\\2024-04-18_test_decon_with_set3\\2024-02-29_psf488.csv\n",
+      "[[1.80590e+00 8.00000e-04 1.70000e-03]\n",
+      " [8.00000e-04 1.75100e+00 5.13600e-01]\n",
+      " [1.70000e-03 5.13600e-01 1.26865e+01]]\n",
+      "z:\\Shared243\\storal\\2024-04-18_test_decon_with_set3\\2024-03-01_psf488.csv\n",
+      "[[2.06410e+00 3.00000e-03 4.00000e-04]\n",
+      " [3.00000e-03 1.90110e+00 1.00000e-03]\n",
+      " [4.00000e-04 1.00000e-03 1.33002e+01]]\n",
+      "z:\\Shared243\\storal\\2024-04-18_test_decon_with_set3\\2024-03-05_psf488.csv\n",
+      "[[1.87590e+00 1.40000e-03 6.00000e-04]\n",
+      " [1.40000e-03 1.83320e+00 1.80000e-03]\n",
+      " [6.00000e-04 1.80000e-03 1.37764e+01]]\n",
+      "z:\\Shared243\\storal\\2024-04-18_test_decon_with_set3\\2024-03-06_psf488.csv\n",
+      "[[2.05350e+00 7.60000e-03 1.10000e-03]\n",
+      " [7.60000e-03 2.17790e+00 2.40600e-01]\n",
+      " [1.10000e-03 2.40600e-01 1.35467e+01]]\n",
+      "z:\\Shared243\\storal\\2024-04-18_test_decon_with_set3\\2024-03-12_psf488.csv\n",
+      "[[2.32510e+00 1.00000e-03 1.60000e-03]\n",
+      " [1.00000e-03 2.02860e+00 4.03400e-01]\n",
+      " [1.60000e-03 4.03400e-01 1.30477e+01]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "def average_csv_files(file_paths):\n",
     "    # Read data from each CSV file into NumPy arrays\n",
     "    arrays = [np.genfromtxt(file_path, delimiter=',') for file_path in file_paths]\n",
+    "    for file_path in file_paths:\n",
+    "        print(file_path)\n",
+    "        print(np.genfromtxt(file_path, delimiter=','))\n",
+    "\n",
     "\n",
     "    # Compute the element-wise average of the arrays\n",
     "    average_array = np.mean(arrays, axis=0)\n",
@@ -75,22 +106,73 @@
     "    return average_array\n",
     "\n",
     "# Paths to the CSV files\n",
-    "csv_files = [psf1, psf2, psf3]\n",
+    "# csv_files = [psf1, psf2, psf3]\n",
+    "csv_files = glob.glob('z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\*.csv')\n",
     "\n",
     "# Compute the average of the CSV files\n",
     "average_data = average_csv_files(csv_files)\n",
     "\n",
     "# Optionally, save the average array to a new CSV file\n",
-    "np.savetxt('average.csv', average_data, delimiter=',', fmt='%f')\n"
+    "np.savetxt('z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\average.csv', average_data, delimiter=',', fmt='%f')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "id": "3a53f9ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\ST_0038hello.tif',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\ST_0039hello.tif',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\ST_0040hello.tif',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\ST_0041hello.tif',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\ST_0042hello.tif',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\ST_0043hello.tif',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\ST_0044hello.tif',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\ST_0045hello.tif',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\ST_0046hello.tif',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\ST_0047hello.tif',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\ST_0048hello.tif']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tif_files = glob.glob('z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\*.tif')\n",
+    "new_filenames = [name.replace(\".tif\", \"hello.tif\") for name in tif_files]\n",
+    "new_filenames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "2a851a58-8588-4455-8dfa-471dd94287e1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\2024-02-29_psf488.csv',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\2024-03-01_psf488.csv',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\2024-03-05_psf488.csv',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\2024-03-06_psf488.csv',\n",
+       " 'z:\\\\Shared243\\\\storal\\\\2024-04-18_test_decon_with_set3\\\\2024-03-12_psf488.csv']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import glob\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -174,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
