test(batch): Not functional

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -10,59 +10,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected .tif files:\n"
+      "Num GPUs Available:  1\n",
+      "2\n",
+      "fitted\n",
+      "Cancelled.\n"
      ]
     }
    ],
    "source": [
-    "import tkinter as tk\n",
-    "from tkinter import filedialog, Listbox\n",
-    "import os\n",
-    "selected_tif_files = []  # Global list to store selected .tif files\n",
+    "import warnings\n",
+    "# warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
-    "def select_folder_and_display_tif_files():\n",
-    "    global selected_tif_files  # Use the global list\n",
-    "    folder_path = filedialog.askdirectory()\n",
-    "    if folder_path:  # Ensure the user selected a folder\n",
-    "        # Get all .tif files in the selected folder, with full paths\n",
-    "        tif_files = [os.path.join(folder_path, f) for f in os.listdir(folder_path) if f.endswith('.tif')]\n",
-    "        # Sort the files by name\n",
-    "        tif_files.sort()\n",
-    "        \n",
-    "        selected_tif_files = tif_files  # Store the sorted list in the global variable\n",
-    "        \n",
-    "        # Clear the Listbox before adding new entries\n",
-    "        file_listbox.delete(0, tk.END)\n",
-    "        \n",
-    "        # Display the sorted list with full paths in the Listbox\n",
-    "        for file in tif_files:\n",
-    "            file_listbox.insert(tk.END, file)\n",
     "\n",
-    "def confirm_and_quit():\n",
-    "    root.quit()  # Quit the Tkinter main loop\n",
-    "    root.destroy()  # Destroy the main window\n",
     "\n",
-    "# Create the main window\n",
-    "root = tk.Tk()\n",
-    "root.title(\"Select Folder and List .tif Files with Full Paths\")\n",
+    "from RLDecon.get_inputs_batch import get_inputs_batch\n",
+    "from RLDecon.get_inputs import get_inputs\n",
+    "from RLDecon.run_decon_debug import run_decon\n",
     "\n",
-    "# Create a \"Select Folder\" button\n",
-    "select_folder_button = tk.Button(root, text=\"Select Folder\", command=select_folder_and_display_tif_files)\n",
-    "select_folder_button.pack(pady=10)\n",
+    "batch = True\n",
+    "debug = True\n",
+    "if batch:\n",
+    "    variables = get_inputs_batch()\n",
+    "else:\n",
+    "    variables = get_inputs()\n",
+    "    \n",
     "\n",
-    "# Create a Listbox to display the file paths\n",
-    "file_listbox = Listbox(root, width=100, height=20)\n",
-    "file_listbox.pack(pady=10)\n",
+    "# print(variables)\n",
+    "if variables is not None:\n",
+    "    \n",
     "\n",
-    "# Create a \"Confirm\" button\n",
-    "confirm_button = tk.Button(root, text=\"Confirm\", command=confirm_and_quit)\n",
-    "confirm_button.pack(pady=10)\n",
+    "    if batch:\n",
+    "        [input_files, dats, mdata, psfs, x_res, y_res, z_spacing, niter, pad_amount, channel] = variables\n",
+    "        run_decon(input_files, dats, mdata, psfs, x_res, y_res, z_spacing[0], niter[0], pad_amount, channel, debug)\n",
     "\n",
-    "root.mainloop()\n",
-    "\n",
-    "# After the GUI is closed, print the list of selected .tif files\n",
-    "print(\"Selected .tif files:\")"
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bd965fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc0c1126",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1138,33 +1143,62 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "638904f2",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import warnings\n",
-    "# warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, Listbox\n",
+    "import os\n",
+    "selected_tif_files = []  # Global list to store selected .tif files\n",
     "\n",
+    "def select_folder_and_display_tif_files():\n",
+    "    global selected_tif_files  # Use the global list\n",
+    "    folder_path = filedialog.askdirectory()\n",
+    "    if folder_path:  # Ensure the user selected a folder\n",
+    "        # Get all .tif files in the selected folder, with full paths\n",
+    "        tif_files = [os.path.join(folder_path, f) for f in os.listdir(folder_path) if f.endswith('.tif')]\n",
+    "        # Sort the files by name\n",
+    "        tif_files.sort()\n",
+    "        \n",
+    "        selected_tif_files = tif_files  # Store the sorted list in the global variable\n",
+    "        \n",
+    "        # Clear the Listbox before adding new entries\n",
+    "        file_listbox.delete(0, tk.END)\n",
+    "        \n",
+    "        # Display the sorted list with full paths in the Listbox\n",
+    "        for file in tif_files:\n",
+    "            file_listbox.insert(tk.END, file)\n",
     "\n",
+    "def confirm_and_quit():\n",
+    "    root.quit()  # Quit the Tkinter main loop\n",
+    "    root.destroy()  # Destroy the main window\n",
     "\n",
-    "from RLDecon.get_inputs_batch import get_inputs_batch\n",
-    "from RLDecon.get_inputs import get_inputs\n",
-    "from RLDecon.run_decon_debug import run_decon\n",
+    "# Create the main window\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Select Folder and List .tif Files with Full Paths\")\n",
     "\n",
-    "batch = True\n",
-    "debug = True\n",
-    "if batch:\n",
-    "    variables = get_inputs_batch()\n",
-    "else:\n",
-    "    variables = get_inputs()\n",
-    "    \n",
+    "# Create a \"Select Folder\" button\n",
+    "select_folder_button = tk.Button(root, text=\"Select Folder\", command=select_folder_and_display_tif_files)\n",
+    "select_folder_button.pack(pady=10)\n",
     "\n",
-    "# print(variables)\n",
-    "if variables is not None:\n",
-    "    \n",
+    "# Create a Listbox to display the file paths\n",
+    "file_listbox = Listbox(root, width=100, height=20)\n",
+    "file_listbox.pack(pady=10)\n",
     "\n",
-    "    if batch:\n",
-    "        [input_files, dats, mdata, psfs, x_res, y_res, z_spacing, niter, pad_amount, channel] = variables\n",
-    "        run_decon(input_files, dats, mdata, psfs, x_res, y_res, z_spacing[0], niter[0], pad_amount, channel, debug)\n",
+    "# Create a \"Confirm\" button\n",
+    "confirm_button = tk.Button(root, text=\"Confirm\", command=confirm_and_quit)\n",
+    "confirm_button.pack(pady=10)\n",
     "\n",
-    "    "
+    "root.mainloop()\n",
+    "\n",
+    "# After the GUI is closed, print the list of selected .tif files\n",
+    "print(\"Selected .tif files:\")"
    ]
   },
   {
